fix scrollbar behaviour

--- a/frontend/src/components/AppContainer/Employee/EmployeeDetails/EmployeeDetails.scss
+++ b/frontend/src/components/AppContainer/Employee/EmployeeDetails/EmployeeDetails.scss
@@ -45,6 +45,10 @@
     overflow: scroll;
 }
 
+.employee-profile-data-container::-webkit-scrollbar {
+    display: none;
+}
+
 .profile-data-section-title {
     padding-top: 1rem;
     margin-bottom: 1rem;
